WebCore: 2009-07-30  Mike Fenton  <mike.fenton@torchmobile.com>

Reviewed by Adam Treat.

         Apply colour style to buttons that use Theme settings in Qt.

         https://bugs.webkit.org/show_bug.cgi?id=27814

         * platform/qt/RenderThemeQt.cpp:
         (WebCore::RenderThemeQt::adjustButtonStyle):

LayoutTests:
2009-07-30  Mike Fenton  <mike.fenton@torchmobile.com>

         Reviewed by Adam Treat.

         Add Button Colour style test and results for Qt based upon fix for bug.
         Unskip tables/mozilla/bugs/bug92647-2.html which passes with bug fix.
         Update expected results for qt for test fast/dom/HTMLTableColElement/resize-table-using-col-width-expected
         which also passes with the the bug fix.

         https://bugs.webkit.org/show_bug.cgi?id=27814

         * fast/forms/button-style-color.html: Added.
         * platform/qt/Skipped:
         * platform/qt/fast/dom/HTMLTableColElement/resize-table-using-col-width-expected.txt:
         * platform/qt/fast/forms/button-style-color-expected.txt: Added.

Canonical link: https://commits.webkit.org/38206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46600 268f45cc-cd09-0410-ab3c-d52691b4dbfc